<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/login_linear_layout_divider"
        android:layout_marginTop="@dimen/large">

        <EditText
            android:id="@+id/register_user_name_et"
            style="@style/EditText"
            android:drawableLeft="@mipmap/login_ic_user"
            android:drawablePadding="@dimen/middle"
            android:hint="@string/login_register_account"/>

        <EditText
            android:id="@+id/register_password_et"
            style="@style/EditText"
            android:drawableLeft="@mipmap/login_ic_password"
            android:drawablePadding="@dimen/middle"
            android:inputType="textPassword"
            android:hint="@string/login_register_password"/>

        <EditText
            android:id="@+id/register_re_password_et"
            style="@style/EditText"
            android:drawableLeft="@mipmap/login_ic_password"
            android:drawablePadding="@dimen/middle"
            android:inputType="textPassword"
            android:hint="@string/login_register_confirm_password"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_phone_et"
                style="@style/EditText"
                android:layout_toLeftOf="@+id/register_code_btn"
                android:drawableLeft="@mipmap/login_ic_phone"
                android:drawablePadding="@dimen/middle"
                android:inputType="phone"
                android:hint="@string/login_register_phone"/>

            <com.linsr.common.gui.widgets.countdown.CountDownButton
                android:id="@id/register_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/small"
                android:background="@drawable/bg_count_down_btn_selector"
                android:minWidth="80dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_tiny"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/register_code_et"
            style="@style/EditText"
            android:drawableLeft="@mipmap/login_ic_phone_1"
            android:drawablePadding="@dimen/middle"
            android:hint="@string/login_register_code"/>

        <EditText
            android:id="@+id/register_recommend_code_et"
            style="@style/EditText"
            android:drawableLeft="@mipmap/login_ic_recommend_code"
            android:drawablePadding="@dimen/middle"
            android:hint="@string/login_register_invite_code"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_confirm_btn"
        style="@style/Button.MainColor"
        android:layout_marginLeft="@dimen/middle"
        android:layout_marginRight="@dimen/middle"
        android:layout_marginTop="@dimen/max"
        android:text="@string/register"/>
</LinearLayout>